# library-management-app

./: .env.example  .env.test.example  .gitignore  README.md  constraints.txt  pyproject.toml
backend/app/: config.py  data.py  database.py  main.py
backend/app/api/: books.py  borrowings.py  members.py
backend/app/models/: book.py  borrowing.py  member.py
backend/app/schemas/: book.py  borrowing.py  member.py
backend/tests/: conftest.py  test_books.py  test_borrowings.py  test_members.py
database/: README.md  schema.sql  test_seed.sql
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/books/: page.tsx
frontend/src/app/borrowings/: BorrowingsContent.tsx  page.tsx
frontend/src/app/members/: page.tsx
frontend/src/components/: Alert.tsx  AppShell.tsx  EmptyState.tsx  LoadingSpinner.tsx  Modal.tsx  PageHeader.tsx  Sidebar.tsx
frontend/src/components/books/: BookForm.tsx
frontend/src/components/borrowings/: BorrowForm.tsx
frontend/src/components/members/: MemberForm.tsx
frontend/src/lib/: api.ts  format.ts  services.ts  types.ts
